Plugin goes to lib/. Long live XML copy-paste reuse.

--- a/org.scala-ide.sdt.core/pom.xml
+++ b/org.scala-ide.sdt.core/pom.xml
@@ -123,6 +123,7 @@
                       <artifactId>scala-continuations-plugin_${scala.binary.version}</artifactId>
                       <type>jar</type>
                       <destFileName>scala-continuations-plugin.jar</destFileName>
+                      <outputDirectory>${project.build.directory}/lib/</outputDirectory>
                     </artifactItem>
                     <artifactItem>
                       <groupId>org.scala-lang.plugins</groupId>
